Fixed bug, added dark mode, and other simple improvement

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ header h1 {
     font-size: 2.5rem;
     color: rgb(200, 34,59);
 }
-
+/* DISCORDDDDDDDDDDD */
 .robots-section {
     display: grid;
     grid-template-columns: repeat(3, 250px);
@@ -37,15 +37,18 @@ figure:nth-child(2n) {
     border: 1px solid black;
     border-radius: .8em;
     border-top-right-radius: 23px;
+    cursor: pointer;
 }
 
 figure:nth-child(2n + 1) {
     border: 1px solid black;
     border-bottom-left-radius: 23px;
+    cursor: pointer;
 }
 figure:nth-child(3) {
     border: 1px solid black;
     border-bottom-right-radius: 23px;
+    cursor: pointer;
 }
 
 figcaption {
@@ -71,6 +74,8 @@ label input, button {
     width: 50%;
     margin: auto;
     max-width: 500px;
+    max-height: 150px;
+    overflow: auto;
 }
 
 a {
@@ -85,6 +90,7 @@ a {
     margin: auto;
     padding: 1em;
     display: none;
+    line-height: 1.5;
 }
 
 .select {
@@ -92,4 +98,14 @@ a {
     top: 150px;
     right: 150px;
 
+}
+
+#dark {
+    border:  3px solid ;
+    width: 100px;
+    position: absolute;
+    text-align: center;
+    border-radius: 10px;
+    margin: 1em;
+    cursor: pointer;
 }
